--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "axios": "^0.27.2",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.1",
+    "react-icons": "^4.3.1",
     "recoil": "^0.7.3-alpha.2",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "styled-reset": "^4.3.4"
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
