--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.1",
+    "firebase": "^9.8.1",
     "react-icons": "^4.3.1",
     "recoil": "^0.7.3-alpha.2",
     "styled-components": "^5.3.5",
