--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "babel-plugin-styled-components": "^2.0.7",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.1",
     "firebase": "^9.8.1",
