modify: package.json / 빌드 옵션 수정

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,6 +1,6 @@
 appId: com.example.nextron
-productName: My Nextron App
-copyright: Copyright © 2018 Yoshihide Shiono
+productName: Nextron Messanger
+copyright: Copyright © 2022 Doyeon Kil
 directories:
   output: dist
   buildResources: resources
